# razer_battery_taskbar

./: CMakeLists.txt  main.vbs  readme.md
src/: razer_battery_tray.cpp
